[metadata]
name = async_etcd3gw
version = attr: async_etcd3gw.__version__
summary = An async Python client for etcd3 grpc-gateway v3 API
keywords = etcd, asyncio, aiohttp
long_description = file: README.md
long_description_content_type = text/markdown
author = Alkemy spa
author_email = DLBDDepartment@alkemy.com
home_page = https://github.com/DLBD-Department/async_etcd3gw
python_requires = >=3.9
license = Apache License 2.0
license_files = LICENSE
platforms = any
classifier =
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: System :: Distributed Computing
project_urls =
    Bug Tracker = https://github.com/DLBD-Department/async_etcd3gw/issues
    Source Code = https://github.com/DLBD-Department/async_etcd3gw

[options]
zip_safe = True
include_package_data = True
python_requires = >=3.9
packages = find:
install_requires =
    aiohttp

[options.packages.find]
include = async_etcd3gw*
exclude =
    ez_setup
    examples
    tests

[options.extras_require]
test = pytest

[aliases]
test = pytest

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 132
extend-ignore =
    E203
    E401
    W504
    E221
